# directx-3d-engine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  run.bat
include/Demo/: Car.h  Map.h
include/Engine/: Engine.h
include/Engine/Core/: Object.h  Renderer.h  Scene.h  Window.h
include/Engine/Game/: Player.h
include/Engine/Graphics/: Camera.h  Material.h  Mesh.h  Model.h  Shader.h  Sprite.h  Texture.h
include/Engine/Math/: Maths.h
include/Engine/Objects/: Light.h
include/Engine/Utils/: Clock.h  Files.h
include/Game/: Player.h
source/: main.cpp
source/Demo/: Car.cpp  Map.cpp  main.cpp
source/Engine/: Engine.cpp
source/Engine/Core/: Renderer.cpp  Scene.cpp  Window.cpp
source/Engine/Game/: Player.cpp
source/Engine/Graphics/: Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Sprite.cpp  Texture.cpp
source/Engine/Objects/: Model.cpp  Sprite.cpp
source/Engine/Utils/: Clock.cpp  Files.cpp
source/Game/: Player.cpp
